--- a/configs/example.yaml
+++ b/configs/example.yaml
@@ -5,7 +5,7 @@ max_iter : 200000
 eval_iter: 10000
 save_iter: $eval_iter
 log_iter : 100
-bs_train : 1024 # batch size 
+bs_train : 8192 # batch size 
 bs_eval  : 32768
 bs_test  : $bs_eval
 N_eval   : 50
@@ -123,3 +123,6 @@ lr_decay :
 clip_grad :
   max_val  : 0.1
   max_norm : 0.1
+
+fullmodel:
+  dummy: True
