--- a/configs/example.yaml
+++ b/configs/example.yaml
@@ -5,8 +5,8 @@ max_iter : 200000
 eval_iter: 1000000
 save_iter: $eval_iter
 log_iter : 100
-bs_train : 1024 # batch size 
-bs_eval  : 16384 # 32768
+bs_train : 1024 #1024 # batch size 
+bs_eval  : 32768 # 32768
 bs_test  : $bs_eval
 N_eval   : 5
 lr       : 0.002
@@ -90,15 +90,15 @@ dataset :
 dataloader :
   mode : $mode
   train :
-    batch_size : 8
+    batch_size : 1
     shuffle : True
   
   eval:
-    batch_size : 8
+    batch_size : 1
     shuffle : False
 
   test:
-    batch_size : 8
+    batch_size : 1
     shuffle : False
 
 optim :
