--- a/configs/example.yaml
+++ b/configs/example.yaml
@@ -2,13 +2,13 @@
 
 # training
 max_iter : 200000
-eval_iter: 1000000
+eval_iter: 5000
 save_iter: $eval_iter
 log_iter : 100
-bs_train : 8192 #1024 # batch size 
+bs_train : 1024 #1024 # batch size 
 bs_eval  : 32768 # 32768
 bs_test  : $bs_eval
-N_eval   : 5
+N_eval   : 10
 lr       : 0.002
 lr_final : 0.00002
 workers  : 4
