--- a/configs/example.yaml
+++ b/configs/example.yaml
@@ -1,14 +1,14 @@
 # example config for CuNeRF
 
 # training
-max_iter : 200000
-eval_iter: 1000
+max_iter : 80000 ##200000
+eval_iter: 10000
 save_iter: $eval_iter
 log_iter : 100
 bs_train : 1024 # batch size 
 bs_eval  : 32768
 bs_test  : $bs_eval
-N_eval   : 5
+N_eval   : 
 lr       : 0.002
 lr_final : 0.00002
 workers  : 4
