--- a/configs/NGP.yaml
+++ b/configs/NGP.yaml
@@ -1,21 +1,21 @@
 # example config for CuNeRF
 
 # training
-max_iter : 100000 ##200000
-eval_iter: 10000
-save_iter: $eval_iter
+max_iter : 30000 ##200000
+eval_iter: 30000
+save_iter: 10000
 log_iter : 100
-bs_train : 16384 # batch size 
+bs_train : 1024  # batch size 
 bs_eval  : 32768
 bs_test  : $bs_eval
 N_eval   : 
-lr       : 0.01 ## 0.002
+lr       : 0.001 ## 0.002
 lr_final : 0.001 ## 0.00002
 workers  : 4
 
 # modeling
 stype     : cube
-radius    : 1
+radius    : 0.5
 n_samples : 64
 n_imps    : 64
 mtype     : NGPMLP
@@ -29,9 +29,9 @@ axis      : [0, 1, 1]
 cam_scale : 1.5
 
 # path
-result_path : save
-save_path   : save
-log_path    : save
+result_path : save_ngp
+save_path   : save_ngp
+log_path    : save_ngp
 
 loss : 
   name : MSE_LOSS_REGULARISATION
@@ -77,7 +77,7 @@ model:
     activation: ReLU
     output_activation: None
     n_neurons: 64
-    n_hidden_layers: 2
+    n_hidden_layers: 4
 
 model_ft : $model
 
