--- a/configs/NGP.yaml
+++ b/configs/NGP.yaml
@@ -33,9 +33,9 @@ axis      : [0, 1, 1]
 cam_scale : 1.5
 
 # path
-result_path : save_ngp_avg
-save_path   : save_ngp_avg
-log_path    : save_ngp_avg
+result_path : save_ngp_512
+save_path   : save_ngp_512
+log_path    : save_ngp_512
 
 loss : 
   name : MSE_LOSS_REGULARISATION
@@ -62,7 +62,7 @@ model:
     otype: HashGrid
     n_levels: 16 ## level of hierachies 
     n_features_per_level: 2 ## F
-    log2_hashmap_size: 19 
+    log2_hashmap_size: 21
     base_resolution: 16
     per_level_scale: 1.5
   
