--- a/configs/NGP-r2.yaml
+++ b/configs/NGP-r2.yaml
@@ -2,7 +2,7 @@
 
 # training
 max_iter : 40000 ##200000
-eval_iter: 20000
+eval_iter: 40000
 save_iter: 10000
 log_iter : 100
 bs_train : 1024  # batch size 
@@ -15,6 +15,8 @@ workers  : 4
 
 z_scaler : 1
 normalise_to_512: True
+always_save: True
+alternating_training: False
 
 
 # modeling
