--- a/configs/vcube.yaml
+++ b/configs/vcube.yaml
@@ -1,9 +1,9 @@
 # example config for CuNeRF
 
 # training
-max_iter : 40000 ##200000
+max_iter : 400000 ##200000
 eval_iter: 20000
-save_iter: 10000
+save_iter: 100000
 log_iter : 100
 bs_train : 1024  # batch size 
 bs_eval  : 32768
@@ -15,6 +15,8 @@ workers  : 4
 
 z_scaler : 1
 normalise_to_512: True
+always_save: True
+alternating_training: True
 
 
 # modeling
@@ -33,9 +35,9 @@ axis      : [0, 1, 1]
 cam_scale : 1.5
 
 # path
-result_path : save-vcube
-save_path   : save-vcube
-log_path    : save-vcube
+result_path : save-vcube-size
+save_path   : save-vcube-size
+log_path    : save-vcube-size
 
 loss : 
   name : MSE_LOSS_REGULARISATION
@@ -60,11 +62,16 @@ model:
 
   n_samples: $n_samples
 
+  ## alternating training 
+  training_modes: [colour, size]
+  training_mode_max_iters: [20000, 10000]
+  size_network_method: size
+
   encoding:
     otype: HashGrid
     n_levels: 16 ## level of hierachies 
     n_features_per_level: 2 ## F
-    log2_hashmap_size: 21
+    log2_hashmap_size: 19
     base_resolution: 16
     per_level_scale: 1.5
   
@@ -81,7 +88,7 @@ model:
     activation: ReLU
     output_activation: None
     n_neurons: 64
-    n_hidden_layers: 4
+    n_hidden_layers: 3
 
 model_ft : $model
 
