--- a/configs/vcube-scale.yaml
+++ b/configs/vcube-scale.yaml
@@ -1,7 +1,7 @@
 # example config for CuNeRF
 
 # training
-max_iter : 40000 ##200000
+max_iter : 100000 ##200000
 eval_iter: 20000
 save_iter: 10000
 log_iter : 100
@@ -16,16 +16,15 @@ workers  : 4
 z_scaler : 1
 normalise_to_512: True
 always_save: True
-save_async: True
-alternating_training: False
+alternating_training: True
 
 
 # modeling
-stype     : cube
-radius    : 1
-n_samples : 125
+stype     : cube ## dummy value
+radius    : 0.5
+n_samples : 64
 n_imps    : 64
-mtype     : NGPMLP
+mtype     : VcubeMLP
 
 # test
 zpos      : [0]
@@ -36,9 +35,9 @@ axis      : [0, 1, 1]
 cam_scale : 1.5
 
 # path
-result_path : ngp-r1
-save_path   : ngp-r1
-log_path    : ngp-r1
+result_path : save-vcube-scale-2
+save_path   : save-vcube-scale-2
+log_path    : save-vcube-scale-2
 
 loss : 
   name : MSE_LOSS_REGULARISATION
@@ -61,21 +60,35 @@ model:
   n_input_dims: 3
   n_output_dims: 2
 
+  n_samples: $n_samples
+
+  ## alternating training 
+  training_modes: [colour, size]
+  training_mode_max_iters: [20000, 10000]
+  size_network_method: scale
+
   encoding:
     otype: HashGrid
     n_levels: 16 ## level of hierachies 
     n_features_per_level: 2 ## F
-    log2_hashmap_size: 21
+    log2_hashmap_size: 19
     base_resolution: 16
     per_level_scale: 1.5
   
   ## fast small mlp with tinycudann
-  network:
+  colour_network:
     otype: FullyFusedMLP
     activation: ReLU
     output_activation: None
     n_neurons: 64
     n_hidden_layers: 4
+
+  size_network:
+    otype: FullyFusedMLP
+    activation: ReLU
+    output_activation: None
+    n_neurons: 64
+    n_hidden_layers: 3
 
 model_ft : $model
 
@@ -163,5 +176,5 @@ clip_grad :
   max_val  : 0.1
   max_norm : 0.1
 
-ngpmodel:
+vcubemodel:
   dummy: True
